created basic components + css

--- a/src/index.css
+++ b/src/index.css
@@ -26,15 +26,33 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  padding: 1.5rem 2.5rem;
+  background-color: #242424;
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.785);
+}
+
+header > * {
+  margin: 0 1rem;
+}
+
+header > button {
+  margin-left: auto;
+  background-color: var(--edit-color);
+  transition: var(--transition);
+}
+header > button:hover {
+  background-color: var(--edit-color-hover);
 }
 
 button {
@@ -47,13 +65,6 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
